<resources>
    <string name="app_name">RUStaying</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="logoimage">logoimage</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="book_a_room">Book a room</string>
    <string name="inbox">Inbox</string>
    <string name="logout">Logout</string>
    <string name="key_card">Key Card</string>
    <string name="check_in">Check In</string>
    <string name="welcome_back_name">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="request_bellboy">Request Bellboy</string>
    <string name="view_users">View Users</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="view_rooms">View Rooms</string>
    <string name="view_guests">View Guests</string>
    <string name="view_services">View Services</string>
    <string name="view_hotel_data">View Hotel Data</string>
    <string name="guest_information">Guest Information</string>
    <string name="room_information">Room Information</string>
    <string name="room_id">Room ID</string>
    <string name="room_type">Room Type</string>
    <string name="room_availability">Room Availability</string>
    <string name="feedback_activity">Feedback Activity</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="submit">Submit</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="feedback">Feedback</string>
    <string name="back">Back</string>
    <string name="bellboy_title">CALL BELLBOY</string>
    <string name="time_of_request">What time should we arrive?</string>
    <string name="number_of_luggage">Number of Luggage?</string>
    <string name="submit_button">SUBMIT</string>
    <string name="request_id_status">Request ID</string>
    <string name="request_status">Status</string>
    <string name="how_was_your_overall_stay_at_the_varghese_hotel">How was your overall stay at the Varghese Hotel?</string>
    <string name="answer">Answer</string>
    <string name="any_issues_with_your_stay_at_varghese_hotel">Any issues with your stay at Varghese Hotel?</string>
    <string name="rate_your_stay_at_varghese_hotel">Rate your stay at Varghese Hotel</string>
    <string name="number_of_bags">Number of Bags</string>
    <string name="hotel_info">hotel Info</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="button">Button</string>
    <string name="view_your_past_reservations">View your past reservations</string>
    <string name="edit_profile">Edit Profile?</string>
    <string name="placebo">placebo</string>
    <string name="send_email">Send Email</string>
    <string name="edit_info">Edit info?</string>
    <string name="edit_your_info">Edit your info</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="first_name_here">First name here</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="last_name_here">Last name here</string>
    <string name="please_enter_your_new_email_address">Please enter your new email address</string>
    <string name="email_here">Email here</string>
    <string name="textview">TextView</string>
    <string name="welcome_bellboy">Welcome Bellboy</string>
    <string name="welcome_valet">Welcome Valet</string>
    <string name="welcome_maintenance">Welcome Maintenance</string>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>
    <string-array name="ampm">
        <item>"AM"</item>
        <item>"PM"</item>
    </string-array>
    <string-array name="luggageNum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="calendar">Calendar</string>
    <string name="check_out_date1">Check Out Date:</string>
    <string name="single">Single</string>
    <string name="select_room_type">Select Room Type</string>
    <string name="queen">Queen</string>
    <string name="king">King</string>
    <string name="double1">double1</string>
    <string name="view_available_rooms">View Available Rooms</string>
    <string name="mm_dd_yyy">MM/DD/YYY</string>
    <string name="check_in_txt">Check In!</string>
    <string name="your_reservation">Your Reservation:</string>
    <string name="check_in_date">Check In Date:</string>
    <string name="check_out_date">Check Out Date:</string>
    <string name="check_in_1">Check In!</string>
    <string name="date3">Date</string>
    <string name="date4">Date</string>
    <string name="room_number">Room Number</string>
    <string name="single_room_full_bed">Single Room - Full Bed</string>
    <string name="price">Price</string>
    <string name="book">Book!</string>
    <string name="todo">TODO</string>
    <string name="testt">TESTT</string>
    <string name="maintenance_title">CALL MAINTENANCE</string>
    <string name="maintenance_input">Please provide a brief description of the problem:</string>
    <string name="valet_title">CALL VALET OR TRAVEL</string>
    <string name="startingAddress">Starting Street:</string>
    <string name="destAddress">Destination Street:</string>
    <string name="startingCity">City, State Zip:</string>
    <string name="destCity">City, State Zip:</string>
    <string name="startTitle">Starting Address:</string>
    <string name="destTitle">Destination Address:</string>
    <string name="request_travelvalet">REQUEST TRAVEL AND VALET</string>
    <string name="request_maintenance">REQUEST MAINTENANCE</string>
    <string name="request_roomservice">REQUEST CLEANING SERVICE</string>
    <string name="calendarServices">Select Date</string>
    <string name="dateServices">Date</string>
    <string name="roomserivce_title">CALL CLEANING SERVICE</string>
    <string name="fromLocation">Where should we pick up your luggage?</string>
    <string name="feedbk">Feedback Form</string>
    <string name="Q1">Please rate your experience</string>
    <string name="Q2">Which of these features did you use: </string>
    <string name="cb1">Room Service</string>
    <string name="cb2">Bellboy Services</string>
    <string name="cb3">Valet Services</string>
    <string name="cb4">Maintenance</string>
    <string name="chkin">If you used our Online Check-In feature, did you find it convenient?</string>
    <string name="y">Yes</string>
    <string name="n">No</string>
    <string name="roomservice">If you used our Room Service feature, please rate it: </string>
    <string name="Bellboyservice">If you used our Bellboy feature, please rate it: </string>
    <string name="ValetServices">If you used the Valet Service feature, please rate it: </string>
    <string name="maintenance">If you used the Maintenance Service feature, please rate it: </string>
    <string name="comments">Any additional comments or concerns:</string>
    <string name="typeHere">Type here</string>
    <string name="bellboy_requests">Bellboy Requests</string>
    <string name="valet_and_travel_requests">Valet and Travel Requests</string>
    <string name="maintenance_requests">Maintenance Requests</string>
    <string name="room_service_requests">Room Service Requests</string>
    <string name="destination_address">Destination Address</string>
    <string name="starting_address">Starting Address</string>
    <string name="info1">
        Guest information about the Varghese Hotel!</string>
    <string name="info2"><u>Room Information:</u></string>
    <string name="info3">We currently offer single and double bedrooms with queen-sized and king-sized beds being offered at a higher price point.
A breakdown of the pricing is below for the current spring season:</string>
    <string name="info4">Single: $250, Double: $300, Queen: $350, King: $400</string>
    <string name="info8"><u>Guest Features:</u></string>
    <string name="info9">At the Varghese Hotel we offer complimentary gym, pool, and restaurant services on the first floor.
        Please find the hours of availability lease see the the front desk with any questions.</string>
    <string name="request_foodservice">REQUEST FOOD SERVICE</string>
    <string name="numberTraveling">Total number of people traveling:</string>
    <string-array name="numberTravelingSpinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="foodservice_title">CALL FOOD SERVICE</string>
    <string-array name="app1S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="app2S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="main1S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="main2S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="main3S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="main4S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="des1S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="des2S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="drink1S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="drink2S">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>