<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0c4c8a"
    android:orientation="vertical"
    tools:context=".ReservationActivity">

    <CheckBox
        android:id="@+id/king"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/king"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/queen"
        app:layout_constraintTop_toBottomOf="@+id/roomType" />

    <CheckBox
        android:id="@+id/queen"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/queen"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/doubleTxt"
        app:layout_constraintTop_toBottomOf="@+id/roomType" />

    <Button
        android:id="@+id/calendarBtn1"
        android:layout_width="106dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:text="@string/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/navigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </View>

    <TextView
        android:id="@+id/checkIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/check_in_date"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/colorText"
        app:itemTextColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <EditText
        android:id="@+id/checkInDate"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/mm_dd_yyy"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkOut"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:text="@string/check_out_date"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendarBtn2"
        android:layout_width="106dp"
        android:layout_height="55dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="36dp"
        android:text="@string/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/checkOutDate"
        android:layout_width="221dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/mm_dd_yyy"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkOut" />

    <CheckBox
        android:id="@+id/single"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/single"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomType" />

    <CheckBox
        android:id="@+id/doubleTxt"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="Double1"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/single"
        app:layout_constraintTop_toBottomOf="@+id/roomType" />

    <TextView
        android:id="@+id/roomType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_room_type"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkOutDate" />

    <Button
        android:id="@+id/viewRoomsBtn"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view_available_rooms"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doubleTxt" />

</android.support.constraint.ConstraintLayout>