<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/roomPic"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:padding="4dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/roomType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/roomPic"
                android:text="@string/single_room_full_bed"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/roomNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/roomType"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/roomPic"
                android:text="@string/room_number"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/roomType"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/roomPic"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>