<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/topborderwhite"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/roomid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/room_id"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/roomtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/room_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/room_availability"
                android:textSize="16sp" />


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
