<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AdminServiceList">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/bellboy_requests"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:background="@color/colorAccent"
            android:text="@string/bellboy_requests"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/valet_travel"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:background="@color/colorAccent"
            android:text="@string/valet_and_travel_requests"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/maintenance_request"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:background="@color/colorAccent"
            android:text="@string/maintenance_requests"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/room_Service"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:background="@color/colorAccent"
            android:text="@string/room_service_requests"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>