<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:padding="8dp"
                android:textColor="@color/design_default_color_primary"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/guest_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp" />

    </LinearLayout>

</android.support.design.card.MaterialCardView>